# git-commit-date-py

./: pyproject.toml  test-small.txt  test.txt
my_tui/: app-panel.py  app.py  main.py  test.txt
