[tool.poetry]
name = "my-tui"
version = "0.1.0"
description = ""
authors = ["Андрей Тарасенко <tarasenko@algont.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.3"
questionary = "^2.0.1"
textual = "^0.84.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
